# abac-rs

./: Cargo.toml  README.md  schema.sql
migrations/2018-06-18-130221_enable_pgcrypto_extention/: down.sql
migrations/2018-06-18-130334_create_abac_attribute_type/: down.sql  up.sql
migrations/2018-06-18-131228_create_abac_subject/: down.sql  up.sql
migrations/2018-06-18-132718_create_abac_object/: down.sql  up.sql
migrations/2018-06-18-132749_create_abac_action/: down.sql  up.sql
migrations/2018-06-18-132827_create_abac_policy/: down.sql  up.sql
migrations/2018-06-18-135804_define_abac_object_target_function/: down.sql  up.sql
migrations/2018-06-18-140715_create_abac_subject_target_function/: down.sql  up.sql
migrations/2018-06-19-091409_define_abac_action_target_function/: down.sql  up.sql
migrations/2018-06-19-091627_define_abac_authorize_function/: down.sql  up.sql
migrations/2018-06-19-091723_create_abac_object_list_function/: down.sql  up.sql
migrations/2018-06-19-091723_define_abac_object_list_functions/: down.sql  up.sql
migrations/2018-08-23-150907_create_abac_object_target_namespace_list_function/: down.sql  up.sql
migrations/2018-08-23-150919_create_abac_object_target_namespace_array_function/: down.sql  up.sql
src/: attribute.rs  lib.rs  schema.rs
src/models/: abac_action.rs  abac_object.rs  abac_policy.rs  abac_subject.rs  mod.rs
tests/functions/: abac_action_target.rs  abac_authorize.rs  abac_object_list.rs  abac_object_list_1.rs  abac_object_list_2.rs  abac_object_list_3.rs  abac_object_target.rs  abac_subject_target.rs  lib.rs  (+1 more)
