[package]
name = "abac"
version = "0.1.0"
authors = ["Aleksey Ivanov <ialexxei@gmail.com>"]

[dependencies]
diesel = { version = "1.3", features = ["postgres", "uuid", "chrono"] }
uuid = { version = "0.6.5", features = ["v4", "serde"] }
serde = { version = "1.0.66", optional = true, features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "0.5.1"

[[test]]
name = "functions"
path = "tests/functions/lib.rs"

[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "aaa1c61" }
